--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-project",
+  "name": "vue-Todolist",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "start": "vue-cli-service serve",
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --open",
+    "start": "vue-cli-service serve --open",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
