--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db": "json-server --watch db.json",
     "dev": "vue-cli-service serve --open",
     "start": "vue-cli-service serve --open",
     "serve": "vue-cli-service serve --open",
@@ -10,6 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "font-awesome": "^4.7.0",
     "normalize.css": "^8.0.1",
